--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@
 
 [metadata]
 name = yapCAD
+version = 0.0.1
 description = yet another procedural CAD and computational geometry system
 author = Richard DeVaul
 author-email = richard.devaul@gmail.com
