--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,9 @@ author-email = richard.devaul@gmail.com
 license = mit
 long-description = file: README.rst
 long-description-content-type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/rdevaul/yapCAD/
 project-urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://yapcad.readthedocs.io/en/latest/
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
@@ -31,7 +31,7 @@ package_dir =
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
-install_requires = ezdxf; pyglet
+install_requires = ezdxf; pyglet; mpmath
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
