--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,12 @@ name = yapCAD
 version = 0.1.5
 description = yet another procedural CAD and computational geometry system
 author = Richard DeVaul
-author-email = richard.devaul@gmail.com
+author_email = richard.devaul@gmail.com
 license = mit
-long-description = file: README.rst
-long-description-content-type = text/x-rst; charset=UTF-8
+long_description = file: README.rst
+long_description_content_type = text/x-rst; charset=UTF-8
 url = https://github.com/rdevaul/yapCAD/
-project-urls =
+project_urls =
     Documentation = https://yapcad.readthedocs.io/en/latest/
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
@@ -31,7 +31,7 @@ package_dir =
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
-install_requires = ezdxf; pyglet; mpmath
+install_requires = ezdxf; pyglet<2; mpmath
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
