--- a/setup.cfg
+++ b/setup.cfg
@@ -114,3 +114,25 @@ version = 3.2.3
 package = yapcad
 extensions =
     no_skeleton
+
+[bumpver]
+current_version = "2023.1001-alpha"
+version_pattern = "YYYY.BUILD[-TAG]"
+commit_message = "bump version {old_version} -> {new_version}"
+commit = True
+tag = True
+push = True
+
+[bumpver:file_patterns]
+setup.cfg =
+    current_version = "{version}"
+setup.py =
+    "{version}"
+    "{pep440_version}"
+README.rst =
+    {version}
+    {pep440_version}
+README.md =
+    {version}
+    {pep440_version}
+
