moved metadata to pyproject.toml

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,25 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = yapCAD
-version = 0.2.5
-description = yet another procedural CAD and computational geometry system
-author = Richard DeVaul
-author_email = richard.devaul@gmail.com
-license = mit
-long_description = file: README.rst
-long_description_content_type = text/x-rst; charset=UTF-8
-url = https://github.com/rdevaul/yapCAD/
-project_urls =
-    Documentation = https://yapcad.readthedocs.io/en/latest/
-# Change if running only on Windows, Mac or Linux (comma-separated)
-platforms = any
-# Add here all kinds of additional classifiers as defined under
-# https://pypi.python.org/pypi?%3Aaction=list_classifiers
-classifiers =
-    Development Status :: 4 - Beta
-    Programming Language :: Python
-
+# see pyproject.toml
 [options]
 zip_safe = False
 packages = find:
