--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,17 +6,18 @@ authors = [
 ]
 description = "yet another procedural CAD and computational geometry system"
 readme = "README.rst"
-requires-python = ">=3.7"
+requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 dependencies = [
-	      "ezdxf",
-	      "pyglet < 2",
-	      "mpmath"
-	      ]
+              "ezdxf",
+              "pyglet",
+              "mpmath"
+              ]
 
 [project.optional-dependencies]
 tests = [
