Require Python 3.10, pin pyglet 1.x, guard OpenGL examples

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,11 @@ MANIFEST
 
 # Per-project virtualenvs
 .venv*/
+venv/
+v_*/
+
+#cached python version for pyenv
+.python-version
 
 # generated DXF files in examples
 examples/*.dxf
