--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,9 @@
 # numpy==1.13.3
 # scipy==1.0
 #
-ezdxf
-pyglet<2
-mpmath
+ezdxf>=1.1
+pyglet>=1.5,<2
+mpmath>=1.2
+pyobjc-core; platform_system == "Darwin"
+pyobjc-framework-Cocoa; platform_system == "Darwin"
+pyobjc-framework-Quartz; platform_system == "Darwin"
