--- a/setup.cfg
+++ b/setup.cfg
@@ -13,11 +13,17 @@ package_dir =
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
-install_requires = ezdxf; pyglet<2; mpmath
+install_requires =
+    ezdxf>=1.1
+    pyglet>=1.5,<2
+    mpmath>=1.2
+    pyobjc-core; platform_system == "Darwin"
+    pyobjc-framework-Cocoa; platform_system == "Darwin"
+    pyobjc-framework-Quartz; platform_system == "Darwin"
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
-# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
+python_requires = >=3.10
 
 [options.packages.find]
 where = src
@@ -96,5 +102,3 @@ version = 3.2.3
 package = yapcad
 extensions =
     no_skeleton
-
-
