--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@
 ezdxf>=1.1
 pyglet>=1.5,<2
 mpmath>=1.2
+numpy>=1.22
+mapbox-earcut>=1.0.3
 pyobjc-core; platform_system == "Darwin"
 pyobjc-framework-Cocoa; platform_system == "Darwin"
 pyobjc-framework-Quartz; platform_system == "Darwin"
