--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,8 @@ install_requires =
     ezdxf>=1.1
     pyglet>=1.5,<2
     mpmath>=1.2
+    numpy>=1.22
+    mapbox-earcut>=1.0.3
     pyobjc-core; platform_system == "Darwin"
     pyobjc-framework-Cocoa; platform_system == "Darwin"
     pyobjc-framework-Quartz; platform_system == "Darwin"
