--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,4 +39,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        PYTHONPATH=${PWD}/src:$PYTHONPATH pytest
+        PYTHONPATH=${PWD}/src:$PYTHONPATH pytest tests/ -m "not visual"
