separation of boolean operations into its own module, support for various boolean kernels, ongoing work on full correct boolean support, as is documented in docs/solid_boolean_roadmap.md

--- a/.gitignore
+++ b/.gitignore
@@ -54,5 +54,19 @@ v_*/
 #cached python version for pyenv
 .python-version
 
-# generated DXF files in examples
-examples/*.dxf
+
+
+# generated DXF files
+*.dxf
+# but include documentation DXF files
+!docs/*.dxf
+
+# generated stl files
+*.stl
+# but include documentation stl files
+!docs/*.stl
+
+# generated step files
+*.step
+# but include documentation step files
+!docs/*.step
