Add layered metadata and package viewer updates   - extend metadata helpers with a default  field and    - carry layer assignments through geometry JSON and package creation   - add layer-aware toggles and scaled grid/labels in ycpkg viewer (3D & 2D)   - annotate rocket/example8 packages with meaningful layers   - document the new layer conventions and update layer-aware tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ install_requires =
     mpmath>=1.2
     numpy>=1.22
     mapbox-earcut>=1.0.3
+    PyYAML>=6.0
     pyobjc-core; platform_system == "Darwin"
     pyobjc-framework-Cocoa; platform_system == "Darwin"
     pyobjc-framework-Quartz; platform_system == "Darwin"
