--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
       "mpmath>=1.2",
       "numpy>=1.22",
       "mapbox-earcut>=1.0.3",
+      "PyYAML>=6.0",
       "pyobjc-core; platform_system == 'Darwin'",
       "pyobjc-framework-Cocoa; platform_system == 'Darwin'",
       "pyobjc-framework-Quartz; platform_system == 'Darwin'"
