--- a/setup.cfg
+++ b/setup.cfg
@@ -12,35 +12,10 @@ package_dir =
     =src
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
-# Add here dependencies of your project (semicolon/line-separated), e.g.
-install_requires =
-    ezdxf>=1.1
-    pyglet>=1.5,<2
-    mpmath>=1.2
-    numpy>=1.22
-    mapbox-earcut>=1.0.3
-    PyYAML>=6.0
-    pyobjc-core; platform_system == "Darwin"
-    pyobjc-framework-Cocoa; platform_system == "Darwin"
-    pyobjc-framework-Quartz; platform_system == "Darwin"
-# The usage of test_requires is discouraged, see `Dependency Management` docs
-# tests_require = pytest; pytest-cov
-# Require a specific Python version, e.g. Python 2.7 or >= 3.4
-python_requires = >=3.10
-
 [options.packages.find]
 where = src
 exclude =
     tests
-
-[options.extras_require]
-# Add here additional requirements for extra features, to install with:
-# `pip install yapCAD[PDF]` like:
-# PDF = ReportLab; RXP
-# Add here test requirements (semicolon/line-separated)
-testing =
-    pytest
-    pytest-cov
 
 [options.entry_points]
 # Add here console scripts like:
@@ -76,8 +51,8 @@ testpaths = tests
 dists = bdist_wheel
 
 [bdist_wheel]
-# Use this option if your package is pure-python
-universal = 1
+# Build platform-specific wheels; pure-python installs remain supported.
+universal = 0
 
 [build_sphinx]
 source_dir = docs
