--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,8 @@ channels:
 dependencies:
   - python=3.12
   - pythonocc-core=7.7.2
+  - trimesh
   - pip
   - pip:
     - -e .[test]
+    - manifold3d
